# signal-festival

./: .gitignore  docker-compose copy.yml  docker-compose-old.yml  docker-compose.yml  pyproject.toml
new_signal/generateAnswer/: Dockerfile  chat.py  convertMP4.py  fastapiWork.py  generateVoice.py  golosWorkAnchient.py  helper.py  pyproject.toml  translation.py
new_signal/handlerMessage/: Dockerfile  fastapiWork.py  golosWork copy anchiet.py  golosWork copy angelic_alien_voice.py  golosWork copy jarvis.py  golosWork copy orator.py  golosWork copy.py  golosWork final.py  golosWork final3.py  golosWork predfinal.py  golosWork signal_furs copy.py  golosWork.py  golosWork2.py  golosWorkAnchient.py  golosWorksignal_furs2.py  golosWorksignal_furs3.py  googleSheet.py  handler.py  postgreWork.py  pyproject.toml  qvest.py  workRedis.py
new_signal/senderMessage/: fastapiWork.py  pyproject.toml  workTelegram.py
new_signal/telegramConnect/: Dockerfile  handlers.py  postgreWork.py  pyproject.toml  workTelegram.py
new_signal/vectorDBwork/: Dockerfile  fastapiWork.py  pyproject.toml
new_signal/webHookConnect/: fastapiWork.py  translation.py
signal_festival/: aioFlaskWork.py  chat.py  docker-compose.yml  fastAPIwork.py  gpt.py  gptTunnel.py  gptWork.py  gpttunnel_utils.py  handlers.py  openai_utils.py  visualization.py  workFlask.py  workTelegram.py
signal_festival/visual/: app.py
signal_festival/visual/static/: script.js
signal_festival/visual/templates/: index.html
signal_festival/visual2/static/: script copy.js  script.c6456acd.js  script.js  shader.frag  style.css
signal_festival/visual2/templates/: index.html
tests/: genAudioTest.py  genAudioTestcopy.py  genTextTest.py
